# nixos-opensearch-generator

./: Cargo.toml  shell.nix
src/: main.rs
