[package]
name = "nix-opensearch-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
mime = "0.3.17"
reqwest = "0.12.9"
scraper = "0.21.0"
serde = { version = "1.0.215", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_with = "3.11.0"
tokio = { version = "1.41.1", features = ["macros"] }
url = { version = "2.5.3", features = ["serde"] }
